@@ -1,5 +1,10 @@
 Version 0.4.10
 
+2002-04-27  Kjetil Jacobsen  <kjetilja>
+
+	* Fixed potential memory leak and thread race (by Markus
+	Oberhumer)
+
 Version 0.4.9
 
 2002-04-15  Kjetil Jacobsen  <kjetilja>
